[gd_scene load_steps=2 format=3 uid="uid://c7g7codw6qsbu"]

[ext_resource type="Script" path="res://scenes/bgm.gd" id="1_bdg3m"]

[node name="BGM" type="AudioStreamPlayer"]
bus = &"BGM"
script = ExtResource("1_bdg3m")

[node name="BGM_Rush" type="AudioStreamPlayer" parent="."]
volume_db = -60.0
bus = &"BGM_rush"

[node name="MightTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MightTimer" to="." method="_on_might_timer_timeout"]
